Altering the human strategy section.

--- a/Human Strategy.ipynb
+++ b/Human Strategy.ipynb
@@ -20,6 +20,60 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We are not going to open an editor. There we are going to create a script which will call the human player. Our script will look similar to this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import axelrod as axl\n",
+    "import random\n",
+    "\n",
+    "strategies = [s() for s in axl.strategies]\n",
+    "random = random.randint(0, 178)\n",
+    "opponent = strategies[random]\n",
+    "me = axl.Human(name='Nikoleta')\n",
+    "players = [opponent, me]\n",
+    "\n",
+    "# play the match and return winner and final score\n",
+    "match = axl.Match(players, turns=3)\n",
+    "match.play()\n",
+    "\n",
+    "print('You have competed against {}, the final score of the match is: {} and the winner was {}'\n",
+    "      .format(opponent.name, match.final_score(),match.winner()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercise\n",
+    "--------\n",
+    "\n",
+    "Using the script that was described above:\n",
+    "\n",
+    "- create a `Human()` player with your name\n",
+    "- play against various opponents and write down your scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "A script that calls the `Human()` strategy and creates a match using a random generated opponent has already been written (human.py). For now we will have to move to a jupyter terminal.\n",
     "\n",
     "Once you have opened your terminal you can type the following command:\n",
@@ -89,28 +143,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Exercise\n",
-    "--------\n",
-    "\n",
-    "Using the script that was described above:\n",
-    "\n",
-    "- create a `Human()` player with your name\n",
-    "- play against various opponents and write down your scores"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Summary\n",
     "--------\n",
     "\n",
@@ -125,9 +157,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python [conda env:axelrod]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-axelrod-py"
   },
   "language_info": {
    "codemirror_mode": {
