--- a/Human Strategy.ipynb
+++ b/Human Strategy.ipynb
@@ -44,8 +44,8 @@
     "match = axl.Match(players, turns=3)\n",
     "match.play()\n",
     "\n",
-    "print('You have competed against {}, the final score of the match is: {} and the winner was {}'\n",
-    "      .format(opponent.name, match.final_score(),match.winner()))"
+    "print('You have competed against {}, the final score of the match is:\n",
+    "      '{} and the winner was {}'.format(opponent.name, match.final_score(),match.winner()))"
    ]
   },
   {
