--- a/Writing a Strategy.ipynb
+++ b/Writing a Strategy.ipynb
@@ -205,9 +205,17 @@
     "    'manipulates_state': False\n",
     "}\n",
     "```\n",
-    "This helps classify the strategy as described in Classification (http://axelrod.readthedocs.io/en/latest/tutorials/advanced/classification_of_strategies.html#classification-of-strategies) of strategies.\n",
-    "\n"
+    "This helps classify the strategy as described in Classification (http://axelrod.readthedocs.io/en/latest/tutorials/advanced/classification_of_strategies.html#classification-of-strategies) of strategies."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
