Last corrections after workshop.

--- a/Human Strategy.ipynb
+++ b/Human Strategy.ipynb
@@ -24,28 +24,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": [
+    "```\n",
     "import axelrod as axl\n",
     "import random\n",
     "\n",
     "strategies = [s() for s in axl.strategies]\n",
-    "random = random.randint(0, 178)\n",
-    "opponent = strategies[random]\n",
+    "opponent = random.choice(axl.strategies)\n",
     "me = axl.Human(name='Nikoleta')\n",
-    "players = [opponent, me]\n",
+    "players = [opponent(), me]\n",
     "\n",
     "# play the match and return winner and final score\n",
     "match = axl.Match(players, turns=3)\n",
     "match.play()\n",
     "\n",
-    "print('You have competed against {}, the final score of the match is:\n",
-    "      '{} and the winner was {}'.format(opponent.name, match.final_score(),match.winner()))"
+    "print('You have competed against {}, the final score of the match is:{} and the winner was {}'.format(opponent.name, match.final_score(),match.winner()))\n",
+    "```"
    ]
   },
   {
@@ -74,7 +72,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A script that calls the `Human()` strategy and creates a match using a random generated opponent has already been written (human.py). For now we will have to move to a jupyter terminal.\n",
+    "Human script (Optional)\n",
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A script that calls the `Human()` strategy and creates a match using a random generated opponent has already been written (human.py). For now we will have to move to a terminal.\n",
     "\n",
     "Once you have opened your terminal you can type the following command:\n",
     "\n",
