--- a/Matches and Tournaments.ipynb
+++ b/Matches and Tournaments.ipynb
@@ -23,29 +23,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/nightwing/anaconda3/envs/axelrod/lib/python3.5/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
-      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n",
-      "/home/nightwing/anaconda3/envs/axelrod/lib/python3.5/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
-      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import axelrod as axl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -53,17 +42,17 @@
     {
      "data": {
       "text/plain": [
-       "[('C', 'D'), ('C', 'D'), ('C', 'D'), ('C', 'C'), ('C', 'D')]"
+       "[('C', 'C'), ('C', 'C'), ('C', 'C'), ('C', 'C'), ('C', 'D')]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "players = (axl.Cooperator(), axl.Random())\n",
-    "match = axl.Match(players, 5)\n",
+    "match = axl.Match(players, turns=5)\n",
     "results = match.play()\n",
     "results"
    ]
@@ -77,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -85,10 +74,10 @@
     {
      "data": {
       "text/plain": [
-       "[(0, 5), (0, 5), (0, 5), (3, 3), (0, 5)]"
+       "[(3, 3), (3, 3), (3, 3), (3, 3), (0, 5)]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -115,10 +104,10 @@
     {
      "data": {
       "text/plain": [
-       "(3, 23)"
+       "(12, 17)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -137,10 +126,10 @@
     {
      "data": {
       "text/plain": [
-       "(0.6, 4.6)"
+       "(2.4, 3.4)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -162,7 +151,7 @@
        "Random: 0.5"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -181,10 +170,10 @@
     {
      "data": {
       "text/plain": [
-       "(5, 1)"
+       "(5, 4)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -203,10 +192,10 @@
     {
      "data": {
       "text/plain": [
-       "(1.0, 0.2)"
+       "(1.0, 0.8)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,12 +218,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "axelrod.strategies.titfortat.TitForTat"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "axl.TitForTat"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -260,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -279,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -290,19 +292,41 @@
        "200"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tournament = axl.Tournament(players)\n",
+    "tournament = axl.Tournament(players=players)\n",
     "tournament.turns # default value of turns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tournament.repetitions # default value of repititions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -310,9 +334,7 @@
     {
      "name": "stderr",
      "output_type": "stream",
-     "text": [
-      "                                                                 \r"
-     ]
+     "text": []
     },
     {
      "data": {
@@ -325,7 +347,7 @@
        " 'Cooperator']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -346,15 +368,15 @@
     {
      "data": {
       "text/plain": [
-       "[[1773, 1797, 1836, 1761, 1821, 1773, 1800, 1785, 1806, 1809],\n",
-       " [2612, 2696, 2644, 2604, 2672, 2652, 2636, 2656, 2644, 2608],\n",
-       " [2643, 2323, 2570, 2641, 2586, 2468, 2602, 2135, 2583, 2579],\n",
-       " [2360, 2328, 2343, 2354, 2355, 2336, 2366, 2347, 2334, 2339],\n",
-       " [1983, 2117, 1995, 1989, 2016, 2050, 2004, 2166, 1995, 2004],\n",
-       " [2657, 2602, 2644, 2665, 2614, 2649, 2673, 2648, 2641, 2681]]"
+       "[[1770, 1818, 1800, 1812, 1857, 1821, 1800, 1797, 1809, 1794],\n",
+       " [2640, 2608, 2668, 2668, 2692, 2620, 2628, 2600, 2692, 2624],\n",
+       " [2624, 2176, 2379, 2217, 2524, 2557, 2583, 2620, 2314, 2638],\n",
+       " [2378, 2354, 2311, 2350, 2344, 2338, 2345, 2348, 2339, 2359],\n",
+       " [2016, 2169, 2047, 2126, 2019, 2046, 1998, 1983, 2065, 1980],\n",
+       " [2677, 2634, 2630, 2658, 2669, 2629, 2699, 2644, 2636, 2628]]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
