--- a/1. Introduction.ipynb
+++ b/1. Introduction.ipynb
@@ -34,9 +34,9 @@
     "2. Iterated Games\n",
     "    - Axelrod Python library: https://github.com/Axelrod-Python/Axelrod\n",
     "\n",
-    "In this workshop we will concern ourselves with the discipline of Iterated Games. Specifically, we will be using the Axelrod Python Library which will help us study an example known as the Iterated Prisoner's Dilemma(IPD).\n",
+    "In this workshop we will concern ourselves with the discipline of Iterated Games. Specifically, we will be using the Axelrod Python Library which will help us study an example known as the Iterated Prisoner's Dilemma (IPD).\n",
     "In the following sections, we will familiarize ourselves with the IPD and the library. Once we cover the basics\n",
-    "we will try to dive a bit deeper in the library and the the tournaments of the IPD."
+    "we will try to dive a bit deeper in the library and the tournaments of the IPD."
    ]
   },
   {
