--- a/3. Writing a Strategy.ipynb
+++ b/3. Writing a Strategy.ipynb
@@ -14,9 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import axelrod as axl"
@@ -25,9 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class TitForTat(axl.Player):\n",
@@ -70,9 +66,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "What is required is to write the strategy method which takes an opponent as an argument. In the case of TitForTat the strategy checks if it has any history (if len(self.history) == 0). If it does not (ie this is the first play of the match) then it returns C. If not, the strategy simply repeats the opponent’s last move (return opponent.history[-1]):\n",
+    "What is required is to write the strategy method which takes an opponent as an argument. In the case of `TitForTat` the strategy checks if it has any history (`if len(self.history) == 0`). If it does not (ie this is the first play of the match) then it returns C. If not, the strategy simply repeats the opponent’s last move (`return opponent.history[-1]`):\n",
     "\n",
-    "```\n",
+    "```python\n",
     "def strategy(opponent):\n",
     "    \"\"\"This is the actual strategy\"\"\"\n",
     "    # First move\n",
@@ -103,9 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -122,9 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -173,7 +165,7 @@
     "\n",
     "After that simply add in the string that will appear as the name of the strategy:\n",
     "\n",
-    "`name = 'Tit For Tat`"
+    "`name = 'Tit For Tat'`"
    ]
   },
   {
@@ -182,7 +174,7 @@
    "source": [
     "Note that this is mainly used in plots by matplotlib so you can use LaTeX if you want to. For example there is strategy with ππ as a name:\n",
     "\n",
-    "```\n",
+    "```python\n",
     "name = '$\\pi$'\n",
     "Following that you can add in the classifier dictionary:\n",
     "\n",
@@ -196,14 +188,21 @@
     "```\n",
     "This helps classify the strategy as described in Classification (http://axelrod.readthedocs.io/en/latest/tutorials/advanced/classification_of_strategies.html#classification-of-strategies) of strategies."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:axelrod]",
+   "display_name": "game-python",
    "language": "python",
-   "name": "conda-env-axelrod-py"
+   "name": "game-python"
   },
   "language_info": {
    "codemirror_mode": {
@@ -215,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
