--- a/4. Human Strategy.ipynb
+++ b/4. Human Strategy.ipynb
@@ -29,7 +29,7 @@
     "collapsed": true
    },
    "source": [
-    "```\n",
+    "```python\n",
     "import axelrod as axl\n",
     "import random\n",
     "\n",
@@ -62,9 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -80,13 +78,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A script that calls the `Human()` strategy and creates a match using a random generated opponent has already been written (human.py). For now we will have to move to a terminal.\n",
+    "A script that calls the `Human()` strategy and creates a match using a random generated opponent has already been written (`human.py`). For now we will have to move to a terminal.\n",
     "\n",
-    "Once you have opened your terminal you can type the following command:\n",
-    "\n",
-    "`$ pip install docopt`\n",
-    "\n",
-    "and \n",
+    "Once you have opened your terminal activate the `game-python` environment and you can now type the following command:\n",
     "\n",
     "`$ python hyman.py -h`\n",
     "\n",
@@ -158,14 +152,21 @@
     "\n",
     "We will now move to the next section where we will look at writing strategies."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:axelrod]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-axelrod-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -177,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
