ignore image output

--- a/2. Matches and Tournaments.ipynb
+++ b/2. Matches and Tournaments.ipynb
@@ -426,6 +426,7 @@
     }
    ],
    "source": [
+    "#NBVAL_IGNORE_OUTPUT\n",
     "plot = axl.Plot(results)\n",
     "p = plot.boxplot()\n",
     "p.show();"
