--- a/4. Human Strategy.ipynb
+++ b/4. Human Strategy.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are not going to open an editor. There we are going to create a script which will call the human player. Our script will look similar to this:"
+    "We are now going to open an editor. There we are going to create a script which will call the human player. Our script will look similar to this:"
    ]
   },
   {
@@ -148,9 +148,7 @@
     "\n",
     "This section has discussed:\n",
     "\n",
-    "- The human strategy and how we can compete against the strategies of the library.\n",
-    "\n",
-    "We will now move to the next section where we will look at writing strategies."
+    "- The human strategy and how we can compete against the strategies of the library."
    ]
   },
   {
