--- a/1. Introduction.ipynb
+++ b/1. Introduction.ipynb
@@ -108,9 +108,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "game-python",
    "language": "python",
-   "name": "python3"
+   "name": "game-python"
   },
   "language_info": {
    "codemirror_mode": {
@@ -122,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
