addressing some of the comments

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -8,3 +8,30 @@
   year={1981},
   publisher={American Association for the Advancement of Science}
 }
+
+@misc{Weir2009,
+  title={Approaches to learning: a guide for teachers},
+  author={Weir, Jennifer},
+  year={2009},
+  publisher={ROUTLEDGE JOURNALS, TAYLOR \& FRANCIS LTD 4 PARK SQUARE, MILTON PARK~…}
+}
+
+@article{Freeman2014,
+  title={Active learning increases student performance in science, engineering, and mathematics},
+  author={Freeman, Scott and Eddy, Sarah L and McDonough, Miles and Smith, Michelle K and Okoroafor, Nnadozie and Jordt, Hannah and Wenderoth, Mary Pat},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={111},
+  number={23},
+  pages={8410--8415},
+  year={2014},
+  publisher={National Acad Sciences}
+}
+
+@misc{axelrodproject,
+  author       = {{ {The Axelrod project developers} }},
+  title        = {Axelrod: version 4.3.0},
+  month        = apr,
+  year         = 2016,
+  doi          = {<DOI INFORMATION>},
+  url          = {http://dx.doi.org/10.5281/zenodo.<DOI NUMBER>}
+}
