--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -35,3 +35,24 @@
   doi          = {<DOI INFORMATION>},
   url          = {http://dx.doi.org/10.5281/zenodo.<DOI NUMBER>}
 }
+
+@article{Brokaw2004,
+  title={Active learning with Monty Hall in a game theory class},
+  author={Brokaw, Alan J and Merz, Thomas E},
+  journal={The Journal of Economic Education},
+  volume={35},
+  number={3},
+  pages={259--268},
+  year={2004},
+  publisher={Taylor \& Francis}
+}
+
+@article{Knight2015,
+  title={Playing Games: A Case Study in Active Learning Applied to Game Theory},
+  author={Knight, Vincent},
+  journal={MSOR Connections},
+  volume={14},
+  number={1},
+  pages={28--38},
+  year={2015}
+}
