add reference to axelrod-python reference

--- a/paper.bib
+++ b/paper.bib
@@ -32,7 +32,7 @@
   title        = {Axelrod: version 4.3.0},
   month        = apr,
   year         = 2016,
-  doi          = {<DOI INFORMATION>},
+  doi          = {10.5281/zenodo.1405868},
   url          = {http://dx.doi.org/10.5281/zenodo.<DOI NUMBER>}
 }
 
