--- a/3. Writing a Strategy.ipynb
+++ b/3. Writing a Strategy.ipynb
@@ -107,6 +107,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Once you have implemented the strategy which will look like this:\n",
+    "    \n",
+    "```python\n",
+    "class TitFor3Tat(axl.Player):\n",
+    "    ....\n",
+    "```\n",
+    "\n",
+    "You can include it in a tournament by adding it to a list of players. For example:\n",
+    "\n",
+    "```python\n",
+    "players = [TitFor3Tat(), axl.Cooperator(), axl.Random(), ...]\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Further Exercise\n",
     "----------------\n",
     "\n",
@@ -214,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
