Fix typos in introduction section.

--- a/1. Introduction.ipynb
+++ b/1. Introduction.ipynb
@@ -21,15 +21,16 @@
    "source": [
     "This handbook is an introduction to studying [Game Theory](https://en.wikipedia.org/wiki/Game_theory) with [Open Source Software](https://en.wikipedia.org/wiki/Open-source_software).\n",
     "\n",
-    "Game theory is concerned with conflicts, cooperation, and competition between individuals. It makes use of mathematical tools and logic, against stereotypes game theory is not only about numbers and payoffs.\n",
+    "Game theory is concerned with conflicts, cooperation, and competition between individuals. It makes use of mathematical tools and logic.\n",
     "\n",
-    "Game theory has grown into a complex and multi-branched subject over the years due to the applications it has offered into real world problems. It has provided scholars of mathematics, psychologist, politics, philosophy and mainly scholars of economics with a powerful tool for probing a wide variety of problems for their disciplines.\n",
+    "Game theory has grown into a complex and multi-branched subject over the years due to the applications it has offered to real world problems. It has provided scholars of mathematics, psycholy, politics, philosophy and  economics with a powerful tool for understanding a wide variety of problems for their disciplines.\n",
     "\n",
-    "There two main focus of study in Game Theory and there are various pieces of softwares each discipline:\n",
+    "Theere are two main focuses of study in non cooperative Game Theory and there are various pieces of softwares for each discipline:\n",
     "\n",
     "1. The study of what is called a [Nash Equilibrium](https://en.wikipedia.org/wiki/Nash_equilibrium)\n",
     "    - Gambit (a piece of software with a Python interface): http://gambit.sourceforge.net/\n",
-    "    - Cloud.sagemath (using Sage). Documentation: https://doc.sagemath.org/html/en/reference/game_theory/index.html\n",
+    "    - Cocalc.com (using Sagemath). Documentation: https://doc.sagemath.org/html/en/reference/game_theory/index.html\n",
+    "    - Nashpy. Documentation: https://nashpy.readthedocs.io/en/latest/\n",
     "\n",
     "2. Iterated Games\n",
     "    - Axelrod Python library: https://github.com/Axelrod-Python/Axelrod\n",
@@ -53,17 +54,17 @@
    "source": [
     "The Prisoner's Dilemma is a two players game commonly studied in Game Theory. The story goes:\n",
     "\n",
-    "```\n",
-    "There are two criminals and they have been arrested by the police. The criminals are put in separate cells and have no way of communicating with each other.\n",
     "\n",
-    "Unfortunately for the police officer there are not enough evidence to convince the criminals for a serious crime but only for minor theft. The officer then comes up with a way to trick the two prisoners.\n",
+    ">There are two criminals and they have been arrested by the police. The criminals are put in separate cells and have no way of communicating with each other.\n",
     "\n",
-    "Simultaneously, the police officer offer each prisoner a bargain. Each prisoner is given the opportunity either to betray the other by testifying that the other committed the crime, or to cooperate with the other by remaining silent. The offer is:\n",
+    ">Unfortunately for the police officer there are not enough evidence to convince the criminals for a serious crime but only for minor theft. The officer then comes up with a way to trick the two prisoners.\n",
     "\n",
-    "If A and B each betray the other, each of them serves two years in prison\n",
+    ">Simultaneously, the police officer offer each prisoner a bargain. Each prisoner is given the opportunity either to betray the other by testifying that the other committed the crime, or to cooperate with the other by remaining silent. The offer is:\n",
+    "\n",
+    ">If A and B each betray the other, each of them serves two years in prison.\n",
     "If A betrays B but B remains silent, A will be set free and B will serve three years in prison (and vice versa)\n",
     "If A and B both remain silent, both of them will only serve one year in prison (on the lesser charge).\n",
-    "```\n",
+    "\n",
     "\n",
     "In game theory we represent such games using a matrix. Instead of months in prison we will be using a positive payoff (a gain) for each of the actions. See below:\n",
     "\n",
@@ -96,13 +97,6 @@
     "\n",
     "We will now move to the next section where we will look at matches and tournaments."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
