Fix typos for 3rd nb.

--- a/3. Writing a Strategy.ipynb
+++ b/3. Writing a Strategy.ipynb
@@ -179,7 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These references can be found in the Bibliography(http://axelrod.readthedocs.io/en/latest/reference/bibliography.html). If a required references is not there please feel free to add it or just get in touch and we’d be happy to help.\n",
+    "These references can be found in the Bibliography (http://axelrod.readthedocs.io/en/latest/reference/bibliography.html). If a required references is not there please feel free to add it or just get in touch and we’d be happy to help.\n",
     "\n",
     "After that simply add in the string that will appear as the name of the strategy:\n",
     "\n",
@@ -190,7 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that this is mainly used in plots by matplotlib so you can use LaTeX if you want to. For example there is strategy with ππ as a name:\n",
+    "Note that this is mainly used in plots by matplotlib so you can use LaTeX if you want to. For example there is strategy with \\\\(\\pi\\\\) as a name:\n",
     "\n",
     "```python\n",
     "name = '$\\pi$'\n",
@@ -206,13 +206,6 @@
     "```\n",
     "This helps classify the strategy as described in Classification (http://axelrod.readthedocs.io/en/latest/tutorials/advanced/classification_of_strategies.html#classification-of-strategies) of strategies."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
