Use correct tag.

--- a/2. Matches and Tournaments.ipynb
+++ b/2. Matches and Tournaments.ipynb
@@ -412,7 +412,7 @@
    "execution_count": 15,
    "metadata": {
     "tags": [
-     "nbval_ignore_output"
+     "nbval-ignore-output"
     ]
    },
    "outputs": [
@@ -583,7 +583,7 @@
    "execution_count": 22,
    "metadata": {
     "tags": [
-     "naval_ignore_output"
+     "nbval-ignore-output"
     ]
    },
    "outputs": [
