--- a/1. Introduction.ipynb
+++ b/1. Introduction.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "Game theory has grown into a complex and multi-branched subject over the years due to the applications it has offered to real world problems. It has provided scholars of mathematics, psycholy, politics, philosophy and  economics with a powerful tool for understanding a wide variety of problems for their disciplines.\n",
     "\n",
-    "Theere are two main focuses of study in non cooperative Game Theory and there are various pieces of softwares for each discipline:\n",
+    "There are two main focuses of study in non cooperative Game Theory and there are various pieces of softwares for each discipline:\n",
     "\n",
     "1. The study of what is called a [Nash Equilibrium](https://en.wikipedia.org/wiki/Nash_equilibrium)\n",
     "    - Gambit (a piece of software with a Python interface): http://gambit.sourceforge.net/\n",
