Update 4. Human Strategy.ipynb
Co-authored-by: Nikoleta Glynatsi <GlynatsiNE@cardiff.ac.uk>

--- a/4. Human Strategy.ipynb
+++ b/4. Human Strategy.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are now going to open an editor. There we are going to create a script which we will call the human player. Our script will look similar to this:"
+    "We are now going to open an editor. There we are going to create a script that creates a match between a randomly selected strategy from the `axelrod` library and the human strategy. Our script will look similar to this:"
    ]
   },
   {
