--- a/2. Matches and Tournaments.ipynb
+++ b/2. Matches and Tournaments.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So for example lets create a 5 turns match between `Cooperator()` and `Random()`. "
+    "So for example let us create a 5 turns match between `Cooperator` and `Random`. "
    ]
   },
   {
@@ -89,14 +89,14 @@
     "\n",
     "`Random` is a stochastic strategy and its actions depend on a probability. We can see that the strategy cooperated only on the third and fourth turn.\n",
     "\n",
-    "The match between the two strategies is being seeded. That is because of line `axl.seed(0)`. What does that mean? It means that no matter how many times you run the above match the results will remain the same."
+    "The match between the two strategies is being seeded. That is because of the line `axl.seed(0)`. This means that no matter how many times you run the above match the results will remain the same."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "But like we said `Random` is stochastic strategy and thus the actions of the strategy can be different even for the same opponent! We can see this by running a match with a different seed."
+    "`Random` is a stochastic strategy and thus the actions of the strategy can be different even for the same opponent! We can see this by running a match with a different seed."
    ]
   },
   {
@@ -134,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are several measures that can be obtained from a match. Let's consider the match between the strategies for `axl.seed(0)`"
+    "There are several measures that can be obtained from a match. Let us consider the match between the strategies for `axl.seed(0)`"
    ]
   },
   {
@@ -153,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For example the scores each strategy received at each turn. The first element of the tuples correspond to `Cooperator`."
+    "We can view the scores each strategy received at each turn. The first element of the tuples correspond to `Cooperator`."
    ]
   },
   {
@@ -325,13 +325,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -343,7 +336,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remember the library was created to study the interactions between strategies in a round robin tournament. A tournament where each strategy play against all opponents and the strategy with the highest score is the winner of the tournament. Here we will cover how we can easily create a very simple IPD tournament."
+    "Remember the library was created to study the interactions between strategies in a round robin tournament. A tournament where each strategy plays against all opponents. The strategy with the highest score is the winner of the tournament. Here we will cover how we can easily create a very simple IPD tournament."
    ]
   },
   {
@@ -353,7 +346,7 @@
     "Here we create a list of players. \n",
     "\n",
     "\n",
-    "**Note:** A list and the documentation of all the implemended strategies can be found [here](http://axelrod.readthedocs.io/en/latest/reference/all_strategies.html)."
+    "**Reminder:** The full list of all the implemented strategies can be found [here](http://axelrod.readthedocs.io/en/latest/reference/all_strategies.html)."
    ]
   },
   {
@@ -417,7 +410,11 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "nbval-ignore-output"
+    ]
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -429,7 +426,6 @@
     }
    ],
    "source": [
-    "#NBVAL_IGNORE_OUTPUT\n",
     "axl.seed(1)\n",
     "results = tournament.play()"
    ]
@@ -585,7 +581,11 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "nbval-ignore-output"
+    ]
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -609,7 +609,6 @@
     }
    ],
    "source": [
-    "#NBVAL_IGNORE_OUTPUT\n",
     "plot = axl.Plot(results)\n",
     "p = plot.boxplot()\n",
     "p.show();"
@@ -621,9 +620,9 @@
    "source": [
     "The above plot shows several things.\n",
     "\n",
-    "1. The ranks of the strategies. From left to right the strategies are ordered based on their rank. Defector is first and thus is the winner of the tournament. Cooperator is last and thus came last in the tournament.\n",
+    "1. The ranks of the strategies. From left to right the strategies are ordered based on their performance. Defector is first and thus is the winner of the tournament. Cooperator is last and thus came last in the tournament.\n",
     "\n",
-    "2. We are seeing the distributions of the average score each strategy achieved. Random has the more variation in its distribution and thus the strategy has many different scores each time the tournament was repeated. As a reminder the tournament was repeated 10 times."
+    "2. The distributions of the average score each strategy achieved. Random has the more variation in its distribution and thus the strategy has many different scores each time the tournament was repeated. As a reminder the tournament was repeated 10 times."
    ]
   },
   {
@@ -633,17 +632,8 @@
     "EXERCISE\n",
     "--------\n",
     "\n",
-    "Create your own tournament using any five players from the library.\n",
-    "\n",
-    "Futhermore, look at the ranked names and plot the scores."
+    "Create your own tournament using any five players from the library and take a look at the ranked names and plot the scores."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
