--- a/4. Human Strategy.ipynb
+++ b/4. Human Strategy.ipynb
@@ -12,15 +12,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Human strategy is a strategy which asks the user to input a move rather than deriving its own action.\n",
-    "The history of the match is also shown in the terminal, thus you will be able to see the history of the game."
+    "The human strategy is a strategy which asks the user to input a move rather than deriving its own action.\n",
+    "The history of the match is also shown in the terminal, thus you will be able to keep track of what has happened."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are now going to open an editor. There we are going to create a script which will call the human player. Our script will look similar to this:"
+    "We are now going to open an editor. There we are going to create a script that creates a match between a randomly selected strategy from the `axelrod` library and the human strategy. Our script will look similar to this:"
    ]
   },
   {
@@ -150,13 +150,6 @@
     "\n",
     "- The human strategy and how we can compete against the strategies of the library."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -176,7 +169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
