substitute `open source` with `open-source`

--- a/1. Introduction.ipynb
+++ b/1. Introduction.ipynb
@@ -19,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This handbook is an introduction to studying [Game Theory](https://en.wikipedia.org/wiki/Game_theory) with [Open Source Software](https://en.wikipedia.org/wiki/Open-source_software).\n",
+    "This handbook is an introduction to studying [Game Theory](https://en.wikipedia.org/wiki/Game_theory) with [Open-Source Software](https://en.wikipedia.org/wiki/Open-source_software).\n",
     "\n",
     "Game theory is concerned with conflicts, cooperation, and competition between individuals. It makes use of mathematical tools and logic.\n",
     "\n",
@@ -116,7 +116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
