--- a/2. Matches and Tournaments.ipynb
+++ b/2. Matches and Tournaments.ipynb
@@ -181,7 +181,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The final scores, which are the sum of the scores per turn."
+    "Note that these scores correspond to the Prisoner's Dilemma (PD) payoffs as presented in [An introduction to game theory and the Iterated Prisoner's Dilemma](1.%20Introduction.ipynb). Thus, in each turn of the match the strategies play a PD game."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Axelrod game: (R,P,S,T) = (3, 1, 0, 5)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "axl.game.Game()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The PD is set as the default game in the library. However, it is possible to use a different game.\n",
+    "More information can be found on the online documentation of the Axelrod project, and specifically at [Using and playing different stage games](https://axelrod.readthedocs.io/en/stable/tutorials/advanced/games.html)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The final scores of a match, which are the sum of the scores per turn."
    ]
   },
   {
@@ -669,7 +704,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
