--- a/4. Human Strategy.ipynb
+++ b/4. Human Strategy.ipynb
@@ -82,7 +82,7 @@
     "\n",
     "Once you have opened your terminal activate the `game-python` environment and you can now type the following command:\n",
     "\n",
-    "`$ python hyman.py -h`\n",
+    "`$ python human.py -h`\n",
     "\n",
     "This will output some information about the script."
    ]
